# porthole

./: .gitignore  .gitreview  Compute_Utility_Readme  Makefile  Openstack_Utility_Readme  README.md  bindep.txt  install_compute_utility.sh  install_mysqlclient_utility.sh  install_openstack_utility.sh  requirements-direct.txt  requirements-frozen.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
Dockerfiles/: Makefile
Dockerfiles/calicoctl-utility/: Dockerfile_calicoq_calicoctl.alpine  Makefile
Dockerfiles/ceph-utility/: Makefile
Dockerfiles/mysqlclient-utility/: Dockerfile.ubuntu_xenial  build.sh
Dockerfiles/openstack-utility/: Dockerfile.ubuntu_xenial
calicoctl-utility/: values.yaml
calicoctl-utility/templates/: deployment-calicoctl-utility.yaml
ceph-utility/: values.yaml
ceph-utility/templates/: deployment-utility.yaml
charts/calicoctl-utility/: Chart.yaml  requirements.yaml  values.yaml
charts/ceph-utility/: Chart.yaml  values.yaml
charts/compute-utility/: Chart.yaml  values.yaml
charts/etcdctl-utility/: Chart.yaml  values.yaml
charts/ncct-utility/: values.yaml
doc/: requirements.txt
docs/: ceph_maintenance.md  rbd_pv.md  requirements.txt
jmphost/: README.md  funs_uc.sh  setup-access.sh
mysqlclient-utility/: README.md  values.yaml
tools/: helm_install.sh  helm_tk.sh  image_tags.py  run_avt.sh
zuul.d/: base.yaml  calicoctl-utility.yaml  ceph-utility.yaml  compute-utility.yaml  etcdctl-utility.yaml  kubeadm-utility.yaml  mysqlclient-utility.yaml  nodesets.yaml  openstack-utility.yaml  postgresql-utility.yaml
(+216 files in other folders)
